# novastar_client

./: .gitignore  Elevation stations.docx  README.md  acp-station-list.md  jython_example_script.md  mkdocs.yml  novastar-notes.md  pyproject.toml  stations_returned_data.md  tasks.json
.github/workflows/: makedocs.yml  pdocs.yml  release.yml  tag-release.yml  tag_release.yml
docs/: index.html  index.md  novastar_client.html  search.js
docs/novastar_client/: cli.html  models.html  services.html  transform.html
docs/novastar_client/cli/: commands.html  context.html  logging.html  ns5acp.html  settings.html
docs/novastar_client/transform/: dss_data_type.html  dss_time_interval.html  shef_lookup.html
scripts/: con_acq.py  con_acq.toml  continuous_acquisition.py  continuous_acquisition.toml  continuous_acquisition_threading.py  dss_timeseries.py  dss_timeseries_jython.py  gen_ref_pages.py  parse_markdown.py  run_datatypes.py  run_stations_bare.py  run_stations_full.py  run_timeseries.py  run_tscatagory_bare.py  run_tscatagory_full.py  stations_with_data.py
src/novastar_client/: README.md  __init__.py  client.py  config.py  exceptions.py  helpers.py  logging_utils.py  session.py
src/novastar_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scripts/: run_stations_bare.py  run_stations_full.py  run_timeseries.py  run_tscatagory_bare.py
tests/: datatypes_shef.py  stations_data_bare.py  test_datatype_api.py  test_shef_lookup.py  test_stations_api.py  test_timeseries_api.py  test_tscatalog_api.py  tscatalog_data_full.py
(+54 files in other folders)
